[tool.poetry]
name = "moon-phase-status"
version = "0.1.0"
description = ""
authors = ["yan0f <31446439+yan0f@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pylunar = "^0.7.2"
python-dotenv = "^1.0.1"
telethon = "^1.36.0"
python-crontab = "^3.2.0"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
