[project]
name = "moon-phase-status"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pylunar>=0.9.0",
    "python-crontab>=3.2.0",
    "python-dotenv>=1.1.0",
    "telethon>=1.38.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
